--- a/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gang gA'i zhus pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagaṅgottara­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gang gA'i mchog gis zhus pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-043-012-1"/>
+                <author role="translatorMain" xml:id="UT22084-043-012-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-043-012-2">Sophie McGrath</author>
                 <editor role="projectEditor" xml:id="UT22084-043-012-3">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-043-012-24">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-043-012"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +86,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-08T09:53:14.583Z" type="text-version" status="0.0.11" xml:id="UT22084-043-012-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-08T09:53:42.941Z" type="text-version" status="0.0.12" xml:id="UT22084-043-012-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-10T08:51:28.974Z" type="translation-status" status="2.d" xml:id="UT22084-043-012-26">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-10T08:51:28.974Z" type="text-version" status="0.0.13" xml:id="UT22084-043-012-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
