--- a/translations/kangyur/placeholders/040-007_toh56-the_bodhisattvas_scriptural_collection.xml
+++ b/translations/kangyur/placeholders/040-007_toh56-the_bodhisattvas_scriptural_collection.xml
@@ -24,12 +24,12 @@
                 <sponsor xml:id="UT22084-040-007-11">Chang Tai Kwang</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2023</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-040-007"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +94,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-02T09:42:24.699Z" type="text-version" status="0.0.10" xml:id="UT22084-040-007-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-10T13:51:11.968Z" type="translation-status" status="2.a" xml:id="UT22084-040-007-40">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-10T13:51:11.968Z" type="text-version" status="0.0.11" xml:id="UT22084-040-007-41">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
