--- a/translations/kangyur/placeholders/043-003_toh66-the_teaching_of_the_great_magical_display.xml
+++ b/translations/kangyur/placeholders/043-003_toh66-the_teaching_of_the_great_magical_display.xml
@@ -5,20 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Teaching of the Great Magical Display</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahāpratihāryopadeśasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Mahāpratihāryopadeśasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">cho 'phrul chen po bstan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāpratihāryopadeśa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahāpratihāryopadeśa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa cho 'phrul chen po bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《說大神變經》（大正藏：《大寶積經大神變會第二十二》）</title>
-                <author role="translatorMain" ref="eft:team-67"/>
-                <author role="translatorEng" ref="eft:person-409">Tenzin Bhuchung</author>
-                <sponsor ref="eft:sponsor-206">Lee Boon Hwa Kelvin, Doris Lim, Chang Chen Hsien, Lim Cheng Cheng, all sentient beings</sponsor>
+                <author role="translatorMain" xml:id="UT22084-043-003-1"/>
+                <author role="translatorEng" xml:id="UT22084-043-003-2">Tenzin Bhuchung</author>
+                <sponsor xml:id="UT22084-043-003-3">Lee Boon Hwa Kelvin, Doris Lim, Chang Chen Hsien, Lim Cheng Cheng, all sentient beings</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2022</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-043-003"/>
                 <date/>
             </publicationStmt>
@@ -33,20 +34,51 @@
                     <idno source-id="O1JC114941JC11602" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-03T13:35:11.598Z" user="cabie-sim">03/08/2022 13:35:11</note>
-                <note type="updated" update="translation-status" value="4" date-time="2022-05-18T12:44:57.304Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-05-18T12:44:57.304Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-05-23T08:46:35.836Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-23T08:46:35.836Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-23T08:47:02.311Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-23T08:47:29.338Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-06-10T14:36:29.701Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-01T04:23:35.032Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2022-08-01T04:23:53.942Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2022-08-01T04:25:30.108Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.10" date-time="2022-08-03T13:35:09.42Z" user="cabie-sim">Auto (update-sponsorship)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-05-18T12:44:57.304Z" type="translation-status" status="4" xml:id="UT22084-043-003-4">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-18T12:44:57.304Z" type="text-version" status="0.0.1" xml:id="UT22084-043-003-5">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-23T08:46:35.836Z" type="translation-status" status="3" xml:id="UT22084-043-003-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-23T08:46:35.836Z" type="text-version" status="0.0.2" xml:id="UT22084-043-003-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-23T08:47:02.311Z" type="text-version" status="0.0.3" xml:id="UT22084-043-003-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-23T08:47:29.338Z" type="text-version" status="0.0.4" xml:id="UT22084-043-003-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-06-10T14:36:29.701Z" type="text-version" status="0.0.6" xml:id="UT22084-043-003-10">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-08-01T04:23:35.032Z" type="text-version" status="0.0.7" xml:id="UT22084-043-003-11">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-08-01T04:23:53.942Z" type="text-version" status="0.0.8" xml:id="UT22084-043-003-12">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-08-01T04:25:30.108Z" type="text-version" status="0.0.9" xml:id="UT22084-043-003-13">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-08-03T13:35:09.42Z" type="text-version" status="0.0.10" xml:id="UT22084-043-003-14">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.11" xml:id="UT22084-043-003-15">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T16:09:24.507Z" type="translation-status" status="2.h" xml:id="UT22084-043-003-16">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T16:09:24.507Z" type="text-version" status="0.0.12" xml:id="UT22084-043-003-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
