--- a/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
+++ b/translations/kangyur/translations/090-035_toh591-the_supreme_accomplishment_of_invincible_averting_sitatapatra_born_from_the_usnisa_of_the_tathagata.xml
@@ -39,7 +39,7 @@
         <author role="translatorEng" xml:id="UT22084-090-035-377">Roger Espel Llima</author>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.8 <date>2023</date>
+                <edition>v 1.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -201,6 +201,9 @@
                 <change who="#martina-cotter" when="2023-10-23T21:24:33.378Z" type="text-version" status="1.0.8" xml:id="UT22084-090-035-418">
                     <desc>updated ellipsis.</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-11-08T13:35:46.056Z" type="text-version" status="1.0.9" xml:id="UT22084-090-035-419">
+                    <desc>Updated typo.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -217,7 +220,7 @@
           the Heaven of the Thirty-Three. The text details a litany of dangers, illness, and threats
           and provides a spell formula that can be recited to avert them. Sitātapatrā and her spell
           have enjoyed a long history and sustained popularity as a source of security against
-          illness and misfortune, and her spell widely used in contemporary Buddhist communities to
+          illness and misfortune, and her spell is widely used in contemporary Buddhist communities to
           this day.</p>
       </div>
       <div type="acknowledgment">
