--- a/translations/kangyur/placeholders/035-001_toh44-1-chapter_1_the_ornaments_of_all_the_lords_of_the_world.xml
+++ b/translations/kangyur/placeholders/035-001_toh44-1-chapter_1_the_ornaments_of_all_the_lords_of_the_world.xml
@@ -7,13 +7,14 @@
                 <title type="mainTitle" xml:lang="en">Chapter 1: The Ornaments of All the Lords of the World</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'jig rten gyi dbang po thams cad kyi rgyan gyi tshul le'u/</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《一切世主莊嚴品》</title>
-                <sponsor ref="sponsors.xml#sponsor-209">巨人能源 （程晨）</sponsor>
+                <sponsor xml:id="UT22084-035-001-1">巨人能源 （程晨）</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date/>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-035-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -27,11 +28,24 @@
                     <idno source-id="O1JC114941JC14669" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T16:12:58.441Z" user="admin">10/06/2022 16:12:58</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-04-09T10:25:37.701Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T17:07:48.98Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-04-09T10:25:37.701Z" type="text-version" status="0.0.1" xml:id="UT22084-035-001-2">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2021-05-10T17:07:48.98Z" type="text-version" status="0.0.2" xml:id="UT22084-035-001-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-035-001-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:21:42.564Z" type="translation-status" status="3" xml:id="UT22084-035-001-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:21:42.564Z" type="text-version" status="0.0.5" xml:id="UT22084-035-001-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
