--- a/translations/kangyur/placeholders/035-003_toh44-3-chapter_3_samantabhadras_miraculous_samadhi.xml
+++ b/translations/kangyur/placeholders/035-003_toh44-3-chapter_3_samantabhadras_miraculous_samadhi.xml
@@ -9,10 +9,11 @@
                 <title type="otherTitle" xml:lang="zh">普賢三昧幻化品/普賢三昧品</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-035-003"/>
             </publicationStmt>
             <sourceDesc>
@@ -26,10 +27,21 @@
                     <idno source-id="O1JC114941JC14671" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-10T17:10:08.869Z" user="admin">10/05/2021 17:10:08</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T17:10:06.1Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-05-10T17:10:06.1Z" type="text-version" status="0.0.1" xml:id="UT22084-035-003-1">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-035-003-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:24:42.634Z" type="translation-status" status="3" xml:id="UT22084-035-003-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:24:42.634Z" type="text-version" status="0.0.3" xml:id="UT22084-035-003-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
