--- a/translations/kangyur/placeholders/035-006_toh44-6-chapter_6_the_teaching_on_the_ornaments_of_the_worlds_periphery.xml
+++ b/translations/kangyur/placeholders/035-006_toh44-6-chapter_6_the_teaching_on_the_ornaments_of_the_worlds_periphery.xml
@@ -9,10 +9,11 @@
                 <title type="otherTitle" xml:lang="zh">世界边境莊嚴品</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-035-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -26,10 +27,21 @@
                     <idno source-id="O1JC114941JC14674" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-10T17:11:13.856Z" user="admin">10/05/2021 17:11:13</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T17:11:11.085Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-05-10T17:11:11.085Z" type="text-version" status="0.0.1" xml:id="UT22084-035-006-1">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-035-006-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:32:13.964Z" type="translation-status" status="3" xml:id="UT22084-035-006-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:32:13.964Z" type="text-version" status="0.0.3" xml:id="UT22084-035-006-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
