--- a/translations/kangyur/placeholders/035-009_toh44-9-chapter_9_the_teaching_on_the_continuous_array_of_the_worlds_realms.xml
+++ b/translations/kangyur/placeholders/035-009_toh44-9-chapter_9_the_teaching_on_the_continuous_array_of_the_worlds_realms.xml
@@ -9,10 +9,11 @@
                 <title type="otherTitle" xml:lang="zh">世界續安立品</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2021</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-035-009"/>
             </publicationStmt>
             <sourceDesc>
@@ -26,11 +27,24 @@
                     <idno source-id="O1JC114941JC14677" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-03T10:07:09.187Z" user="admin">03/09/2021 10:07:09</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T17:12:16.432Z" user="amy">Auto (update-titles)</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-09-03T10:07:05.62Z" user="john">0.0.2</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-05-10T17:12:16.432Z" type="text-version" status="0.0.1" xml:id="UT22084-035-009-1">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#john" when="2021-09-03T10:07:05.62Z" type="text-version" status="0.0.2" xml:id="UT22084-035-009-2">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-035-009-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:36:57.921Z" type="translation-status" status="3" xml:id="UT22084-035-009-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:36:57.921Z" type="text-version" status="0.0.4" xml:id="UT22084-035-009-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
