--- a/translations/kangyur/placeholders/035-011_toh44-11-chapter_11_the_universal_interpenetration_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/035-011_toh44-11-chapter_11_the_universal_interpenetration_of_the_tathagatas.xml
@@ -9,10 +9,11 @@
                 <title type="otherTitle" xml:lang="zh">如來真實義品/如來名號品</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-035-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -26,10 +27,21 @@
                     <idno source-id="O1JC114941JC14679" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-10T17:12:51.067Z" user="admin">10/05/2021 17:12:51</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T17:12:48.322Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-05-10T17:12:48.322Z" type="text-version" status="0.0.1" xml:id="UT22084-035-011-1">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-035-011-2">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:39:58.641Z" type="translation-status" status="3" xml:id="UT22084-035-011-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:39:58.641Z" type="text-version" status="0.0.3" xml:id="UT22084-035-011-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
