--- a/translations/kangyur/placeholders/036-006_toh44-35-chapter_35_the_acceptances.xml
+++ b/translations/kangyur/placeholders/036-006_toh44-35-chapter_35_the_acceptances.xml
@@ -7,13 +7,14 @@
                 <title type="mainTitle" xml:lang="en">Chapter 35: The Acceptances</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bzod pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《十忍品》</title>
-                <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
+                <sponsor xml:id="UT22084-036-006-1">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date/>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-036-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -27,12 +28,27 @@
                     <idno source-id="O1JC114941JC14703" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T15:52:24.657Z" user="admin">29/06/2022 15:52:24</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:18:08.044Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:16:55.376Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-29T15:52:22.657Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-03-17T02:18:08.044Z" type="text-version" status="0.0.1" xml:id="UT22084-036-006-2">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2021-05-11T05:16:55.376Z" type="text-version" status="0.0.2" xml:id="UT22084-036-006-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-06-29T15:52:22.657Z" type="text-version" status="0.0.3" xml:id="UT22084-036-006-4">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-036-006-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:41:39.292Z" type="translation-status" status="3" xml:id="UT22084-036-006-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:41:39.292Z" type="text-version" status="0.0.5" xml:id="UT22084-036-006-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
