--- a/translations/kangyur/placeholders/036-007_toh44-36-chapter_36_the_teaching_on_the_reckoning_from_the_questions_of_sovereign_mind.xml
+++ b/translations/kangyur/placeholders/036-007_toh44-36-chapter_36_the_teaching_on_the_reckoning_from_the_questions_of_sovereign_mind.xml
@@ -7,13 +7,14 @@
                 <title type="mainTitle" xml:lang="en">Chapter 36: The Teaching on the Reckoning from the Questions of Sovereign Mind</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sems kyi rgyal po dris nas grangs la 'jug pa bstan pa'i le'u/</title>
                 <title type="otherTitle" xml:lang="zh">《華嚴經 》之《心王菩薩問阿僧祇品》</title>
-                <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
+                <sponsor xml:id="UT22084-036-007-1">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date/>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-036-007"/>
             </publicationStmt>
             <sourceDesc>
@@ -27,11 +28,24 @@
                     <idno source-id="O1JC114941JC14704" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T16:21:04.158Z" user="admin">10/06/2022 16:21:04</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:25.156Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:17:20.664Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-03-17T02:19:25.156Z" type="text-version" status="0.0.1" xml:id="UT22084-036-007-2">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2021-05-11T05:17:20.664Z" type="text-version" status="0.0.2" xml:id="UT22084-036-007-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-036-007-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:43:14.964Z" type="translation-status" status="3" xml:id="UT22084-036-007-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T12:43:14.964Z" type="text-version" status="0.0.5" xml:id="UT22084-036-007-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
