--- a/translations/tengyur/placeholders/004-005_toh1189-srihevajrapanjikanamamuktikavali.xml
+++ b/translations/tengyur/placeholders/004-005_toh1189-srihevajrapanjikanamamuktikavali.xml
@@ -10,20 +10,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">dpal dgyes pa'i rdo rje'i dka' 'grel mu tig phreng ba zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Muktāvali</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mu tig phreng ba</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-76">Wiesiek Mical</author>
-                <author role="translatorEng" ref="contributors.xml#person-58">Anna Zilman</author>
-                <author role="translatorEng" ref="contributors.xml#person-50">Dr. Andreas
+                <author role="translatorMain" xml:id="UT23703-004-005-2"/>
+                <author role="translatorEng" xml:id="UT23703-004-005-3">Wiesiek Mical</author>
+                <author role="translatorEng" xml:id="UT23703-004-005-4">Anna Zilman</author>
+                <author role="translatorEng" xml:id="UT23703-004-005-5">Dr. Andreas
                     Doctor</author>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas
+                <consultant role="projectManager" xml:id="UT23703-004-005-6">Dr. Andreas
                     Doctor</consultant>
-                <sponsor ref="sponsors.xml#sponsor-180">Anonymous</sponsor>
+                <sponsor xml:id="UT23703-004-005-7">Anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT23703-004-005"/>
                 <date/>
             </publicationStmt>
@@ -32,9 +33,9 @@
                     <ref>Toh 1189</ref>
                     <biblScope>ff.
                         221r-297r</biblScope>
-                    <author ref="eft:entity-8406" xml:lang="Sa-Ltn">Ratnākaraśānti</author>
-                    <author role="translatorTib" ref="eft:entity-17557" xml:lang="Sa-Ltn">Jetahaṅdu Śāntibhadra</author>
-                    <author role="translatorTib" ref="eft:entity-17554" xml:lang="Bo-Ltn">bod kyi lo tsa ba 'gos lha sa btsas</author>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-004-005-8">Ratnākaraśānti</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-004-005-9">Jetahaṅdu Śāntibhadra</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-004-005-10">bod kyi lo tsa ba 'gos lha sa btsas</author>
                     <location work="UT23703" count-pages="153">
                         <volume number="4" start-page="441" end-page="593"/>
                     </location>
@@ -43,19 +44,46 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh417"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-26T15:22:14.58Z" user="admin">26/01/2022 15:22:14</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-21T09:57:05.834Z" user="andreas">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T17:00:55.963Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-06-28T05:05:10.106Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-07-05T16:23:34.296Z" user="mike">summary added</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1180-1304_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin"/>
-                <note type="updated" update="general" import="tengyur-data-1180-1304_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin">Presents the Generation Stage (utpattikrama; bskyed rim) and Completion Stage (utpannakrama/niṣpannakrama; rdzogs rim) practices for the Hevajra
-            Tantra.</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-01-06T13:28:52.949Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-01-06T13:28:52.949Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-01-20T09:14:07.444Z" user="admin">Auto (correct-orphaned-attributions)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#andreas" when="2020-02-21T09:57:05.834Z" type="text-version" status="0.0.1" xml:id="UT23703-004-005-11">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#amy" when="2021-05-10T17:00:55.963Z" type="text-version" status="0.0.2" xml:id="UT23703-004-005-12">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#amy" when="2021-06-28T05:05:10.106Z" type="text-version" status="0.0.3" xml:id="UT23703-004-005-13">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#mike" when="2021-07-05T16:23:34.296Z" type="text-version" status="0.0.4" xml:id="UT23703-004-005-14">
+                    <desc>summary added</desc>
+                </change>
+                <change who="#admin" when="2021-11-02T12:58:22.645Z" type="import" xml:id="UT23703-004-005-15" source="tengyur-data-1180-1304_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2021-11-02T12:58:22.645Z" type="general" xml:id="UT23703-004-005-16" source="tengyur-data-1180-1304_PH_new_v2.4.xml">
+                    <desc>Presents the Generation Stage (utpattikrama; bskyed rim) and Completion Stage (utpannakrama/niṣpannakrama; rdzogs rim) practices for the Hevajra
+            Tantra.</desc>
+                </change>
+                <change who="#line-tofte" when="2022-01-06T13:28:52.949Z" type="translation-status" status="2.h" xml:id="UT23703-004-005-17">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-01-06T13:28:52.949Z" type="text-version" status="0.0.6" xml:id="UT23703-004-005-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2022-01-20T09:14:07.444Z" type="text-version" status="0.0.7" xml:id="UT23703-004-005-19">
+                    <desc>Auto (correct-orphaned-attributions)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.9" xml:id="UT23703-004-005-20">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T10:09:52.012Z" type="translation-status" status="2.g" xml:id="UT23703-004-005-21">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T10:09:52.012Z" type="text-version" status="0.0.10" xml:id="UT23703-004-005-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
